# rag-techniques-demonstration

./: .gitignore  README.md  pyproject.toml  simple_rag.ipynb
notebooks/: simple_rag.ipynb
